# sona

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile
.beads/: issues.jsonl
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0974444261ee_add_soft_delete.py  20260209_1635_initial_schema.py
backend/app/: config.py  constants.py  database.py  exceptions.py  main.py  seed.py
backend/app/api/: clones.py  content.py  data.py  deps.py  methodology.py  presets.py  providers.py  router.py  samples.py
backend/app/llm/: __init__.py  anthropic.py  base.py  google.py  openai.py  prompts.py  registry.py
backend/app/models/: __init__.py  clone.py  content.py  dna.py  methodology.py  preset.py  sample.py
backend/app/schemas/: __init__.py  clone.py  content.py  data.py  detection.py  dna.py  methodology.py  preset.py  provider.py  sample.py  scoring.py
backend/app/services/: clone_service.py  content_service.py  content_type_detector.py  cost_estimator.py  data_service.py  detection_service.py  dna_service.py  file_parser.py  merge_service.py  methodology_service.py  preset_service.py  provider_service.py  sample_service.py  scoring_service.py  scraping_service.py
backend/tests/: conftest.py  test_seed.py
backend/tests/test_api/: test_clones.py  test_content.py  test_content_import.py  test_data.py  test_deps.py  test_dna.py  test_exception_handler.py  test_health.py  test_merge.py  test_methodology.py  test_presets.py  test_providers.py  test_router.py  test_samples.py
backend/tests/test_llm/: test_anthropic.py  test_google.py  test_openai.py  test_prompts.py  test_registry.py
backend/tests/test_services/: test_clone_service.py  test_constants.py  test_content_import.py  test_content_service.py  test_content_type_detector.py  test_cost_estimator.py  test_database.py  test_detection_service.py  test_dna_service.py  test_exceptions.py  test_file_parser.py  test_merge_service.py  test_methodology_service.py  test_models.py  test_preset_service.py  test_provider_service.py  test_sample_service.py  test_schemas.py  test_scoring_service.py  test_scraping_service.py
docs/: coding-standards.md  design-system.md  dev-setup.md  git-workflow.md  implementation-plan.md  plan.md  project-structure.md  tdd-standards.md  tech-stack.md  user-stories.md
frontend/: .prettierignore  .prettierrc  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/e2e/pages/: BasePage.ts  DesignSystemPage.ts  HomePage.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/hooks/: use-clones.ts  use-content.test.ts  use-content.ts  use-data.test.ts  use-data.ts  use-debounce.test.ts  use-debounce.ts  use-dna.test.ts  use-dna.ts  use-keyboard-shortcut.test.ts  use-keyboard-shortcut.ts  use-keyboard-shortcuts.test.ts  use-keyboard-shortcuts.ts  use-merge.ts  use-methodology.test.ts  use-methodology.ts  use-presets.ts  use-providers.ts  use-samples.ts
frontend/src/lib/: api.test.ts  api.ts  export.test.ts  export.ts  platforms.test.ts  platforms.ts  query-keys.test.ts  query-keys.ts  utils.test.ts  (+1 more)
scripts/: setup-agent-worktree.sh
tasks/: lessons.md
(+169 files in other folders)
