[project]
name = "sona-backend"
version = "0.1.0"
description = "Sona — AI voice cloning assistant backend"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    # LLM
    "openai>=1.60",
    "anthropic>=0.43",
    "google-generativeai>=0.8",
    # File processing
    "python-docx>=1.1",
    "pymupdf>=1.25",
    "pymupdf4llm>=0.0.17",
    # HTTP & Scraping
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    # Utilities
    "nanoid>=2.0",
    "greenlet>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "RUF",   # ruff-specific rules
    "FAST",  # FastAPI-specific rules
    "ASYNC", # flake8-async
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
